--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,17 @@ body {
      background-color: lightblue;
      font-size: 150%;
    }
+
+   .myClass {
+      background-color: gray;
+      color: blue
+    }
+.adeola {
+      font-size: 300%;
+      background-color: yellow;
+      font-family: courier;
+      border: 1px dotted red;
+      text-transform: uppercase;
+      letter-spacing: 5px;
+      transition: rotate(-30)deg;
+    }
