automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,8 @@ body {
    }
 
    .myClass {
-      background-color: gray;
-      color: blue
+      background-color: red;
+      color: green
     }
 .adeola {
       font-size: 300%;
