automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,8 @@ body {
    }
 
    .myClass {
-      background-color: red;
-      color: green
+      background-color: lightblue;
+      color: white
     }
 .adeola {
       font-size: 300%;
