automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
    }
 
    .myClass {
-      background-color: lightblue;
+      background-color: yellow;
       color: white
     }
 .adeola {
