automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
 
    .myClass {
       background-color: yellow;
-      color: white
+      color: red
     }
 .adeola {
       font-size: 300%;
